# archeogpr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: background_candidates.yaml  bandpass_candidates.yaml  dewow_candidates.yaml  time_zero_picks.json
obsidian/ArchaeoGPR_Vault/: 00_HOME.md
obsidian/ArchaeoGPR_Vault/01_PROJECT_STATE/: 00_Claude_Context.md  01_Current_Project_State.md  02_Next_Development_Sprint.md  03_Open_Issues.md  04_Risks_and_Limitations.md  05_Project_Roadmap.md  06_GUI_3D_Risk_Register.md
obsidian/ArchaeoGPR_Vault/02_SPRINTS/: Sprint_01_OpenGPR_Infrastructure.md  Sprint_02_1_TimeZero_DCOffset_Review.md  Sprint_02_2_TimeAxis_DCWindow_Validation.md  Sprint_02_TimeZero_DCOffset.md  Sprint_03_1_Dewow_Bandpass_Decision_QC.md  Sprint_03_Dewow_Bandpass.md  Sprint_04A_Background_Removal.md  Sprint_3D_0_Survey_Geometry_Inspector.md  Sprint_3D_1_Actual_XY_Point_Grid_CScan.md  Sprint_GUI_0_Foundation.md  Sprint_GUI_1B_Background_Tasks.md  Sprint_GUI_1_Viewer_Shell.md  Sprint_GUI_2_Display_Controls.md  Sprint_GUI_3A_Processing_Preview_Apply.md  Sprint_Index.md
obsidian/ArchaeoGPR_Vault/03_ARCHITECTURE/: 3D_Volume_Data_Model.md  Architecture_Overview.md  Data_Model.md  GUI_Architecture.md  OpenGPR_File_Structure.md  Output_and_Export_Architecture.md  Processing_Pipeline_Architecture.md  Processing_Preview_and_Commit_Model.md  Repository_Map.md
obsidian/ArchaeoGPR_Vault/04_DATASETS/: Dataset_Index.md  Swath003_Array02.md
obsidian/ArchaeoGPR_Vault/05_PROCESSING/: Background_Removal.md  Bandpass_Filter.md  DC_Offset.md  Depth_Slices.md  Dewow.md  FK_Filter.md  Gain.md  Migration.md  Processing_Index.md  Processing_Order.md  Time_Zero_Correction.md  Velocity_Analysis.md
obsidian/ArchaeoGPR_Vault/06_DECISIONS/: ADR_001_OpenGPR_Internal_Data_Model.md  ADR_002_TimeZero_Reference_and_Shift_Policy.md  ADR_003_Overflow_Policy_and_Padding_Aware_DC_Offset.md  ADR_004_TimeZero_Relative_Axis_and_DC_Window.md  ADR_005_Dewow_Window_and_Edge_Policy.md  ADR_006_ZeroPhase_Bandpass_and_Masked_Segments.md  ADR_007_Canonical_D2_B1_Selection.md  ADR_008_Background_Removal_Channelwise_and_Window_Policy.md  ADR_009_Canonical_No_Background_Removal_Policy.md  ADR_011_GUI_Technology_Decision.md  ADR_012_GUI_Extras_Isolation_and_PythonOrg_Runtime.md  ADR_013_Display_Policy_and_Non_Destructive_Visualization.md  ADR_014_GUI_Background_Worker_and_Cancellation_Policy.md  ADR_015_GUI_Processing_Preview_and_Atomic_Apply.md  ADR_016_Geometry_Provenance_and_Readiness_Gates.md  ADR_017_Actual_XY_CScan_and_No_Interpolation_Policy.md  ADR_018_Versioned_Dock_Layout_and_Reset_Policy.md  Decision_Index.md
obsidian/ArchaeoGPR_Vault/07_VALIDATION/: Known_Uncertainties.md  Parser_Validation.md  QC_Output_Validation.md  Test_Results.md  Validation_Index.md
obsidian/ArchaeoGPR_Vault/08_SESSION_LOGS/: Session_2026-07-14_1900_Sprint01.md  Session_2026-07-14_2145_Sprint02.md  Session_2026-07-15_Sprint02_1_Review.md  Session_2026-07-15_Sprint02_2_TimeAxis.md  Session_2026-07-15_Sprint03_1_DecisionQC.md  Session_2026-07-15_Sprint03_Canonicalization.md  Session_2026-07-15_Sprint03_DewowBandpass.md  Session_2026-07-15_Sprint04A_BackgroundRemoval.md  Session_2026-07-16_Sprint04A_1_DecisionQCCorrection.md  Session_2026-07-16_Sprint04A_2_HyperbolaQCFix_A0Baseline.md  Session_2026-07-16_Sprint04A_Closure_HumanDecisionA0.md  Session_Index.md
obsidian/ArchaeoGPR_Vault/09_REFERENCES/: External_Resources.md  GPRPy_Reference_and_License_Notes.md  Reference_Index.md  Terminology.md  Windows_Executable_Build.md
obsidian/ArchaeoGPR_Vault/10_TEMPLATES/: Template_ADR.md  Template_Dataset.md  Template_Processing_Module.md  Template_Session_Log.md  Template_Sprint.md  Template_Validation_Report.md
obsidian/ArchaeoGPR_Vault/attachments/: README.md
packaging/: archaeogpr.spec
scripts/: build_windows.ps1  generate_sprint2_1_review_comparison.py  generate_sprint2_2_validation.py  generate_sprint3_1_decision_qc.py  validate_obsidian_vault.py
src/archaeogpr/: __init__.py  __main__.py  cli.py  sprint3_candidates.py  sprint3_canonical.py  sprint4a_candidates.py
src/archaeogpr/cscan/: __init__.py  compute.py  export.py  models.py  validation.py
src/archaeogpr/export/: __init__.py  basic.py  processed.py  sprint3.py  sprint4a.py
src/archaeogpr/geometry/: __init__.py  export.py  models.py  regularity.py  resolve.py  summary.py  transform.py  validation.py
src/archaeogpr/gui/: __init__.py  __main__.py  app.py  export.py  logging_setup.py  main_window.py  window_state.py
src/archaeogpr/gui/models/: cscan_display_settings.py  cscan_session.py  dataset_session.py  display_settings.py  geometry_session.py
src/archaeogpr/gui/processing/: __init__.py  adapters.py  models.py  registry.py
src/archaeogpr/gui/views/: ascan_view.py  bscan_view.py  cscan_view.py  geometry_panel.py  (+2 more)
src/archaeogpr/io/: __init__.py  exceptions.py  ogpr_reader.py
src/archaeogpr/model/: __init__.py  _frozen.py  dataset.py
src/archaeogpr/processing/: __init__.py  background.py  bandpass.py  common.py  dc_offset.py  dewow.py  result.py  time_zero.py
src/archaeogpr/qc/: __init__.py  background.py  band_energy.py  bandpass.py  bscan.py  dc_offset.py  decision_qc.py  dewow.py  geometry.py  metadata.py  phase_metrics.py  spatial_coherence.py  spectrum.py  time_zero.py
tests/: conftest.py  test_background.py  test_background_qc.py  test_bandpass.py  test_cli_sprint3_canonical.py  test_cscan.py  test_data_model.py  test_dc_offset.py  test_dewow.py  test_export_processed.py  test_geometry.py  test_gui.py  test_gui_cscan.py  test_gui_dock_layout.py  test_gui_geometry.py  test_gui_processing.py  test_gui_window_state.py  test_ogpr_reader.py  test_processing_history.py  test_real_ogpr_integration.py  test_spectrum.py  test_sprint2_real_integration.py  test_sprint3_1_decision_qc.py  test_sprint3_canonical.py  test_sprint3_pipeline.py  test_sprint3_real_integration.py  test_sprint4a_candidates.py  test_sprint4a_pipeline.py  test_sprint4a_real_integration.py  test_target_invariance.py  test_time_zero.py
(+4 files in other folders)
