[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archaeogpr"
version = "0.1.0"
description = "Reader, data model, and signal-processing pipeline for OpenGPR (.ogpr) archaeological GPR data -- time-zero/DC-offset correction, dewow, and band-pass filtering, with a canonical Sprint 3 (D2 dewow + B1 band-pass) processing chain selected by human/geophysical review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pytest>=7.4",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
archaeogpr = "archaeogpr.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# No explicit python_version pin: let mypy match the interpreter it runs
# under. Pinning to 3.11 here made mypy choke on numpy's own bundled stubs,
# which use newer syntax than 3.11 when run under a 3.12+ interpreter.
ignore_missing_imports = true
