[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archaeogpr"
version = "0.1.0"
description = "Reader, data model, and signal-processing pipeline for OpenGPR (.ogpr) archaeological GPR data -- time-zero/DC-offset correction, dewow, and band-pass filtering, with a canonical Sprint 3 (D2 dewow + B1 band-pass) processing chain selected by human/geophysical review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "pytest>=7.4",
    "pytest-qt>=4.4",
]
# GUI-0 (design phase, see obsidian/ArchaeoGPR_Vault/06_DECISIONS/ADR_011_GUI_Technology_Decision.md):
# no GUI runtime code exists yet under src/archaeogpr/gui/. These two extras are declared now so
# packaging/dependency-resolution shape is decided ahead of Sprint GUI-1, not because anything
# imports them yet. Neither is installed by CI; headless install/tests remain `pip install -e ".[dev]"`.
gui = [
    "PySide6>=6.7",
    "pyqtgraph>=0.13.7",
]
# Self-contained on purpose: `pip install -e ".[gui3d]"` alone must pull the full
# 2D+3D stack (PySide6/pyqtgraph + pyvista/pyvistaqt), not just the 3D-only pieces.
# The `gui` list is duplicated here rather than self-referenced (e.g. "archaeogpr[gui]")
# to avoid relying on extra-to-extra self-reference resolution.
gui3d = [
    "PySide6>=6.7",
    "pyqtgraph>=0.13.7",
    "pyvista>=0.44",
    "pyvistaqt>=0.11",
]

[project.scripts]
archaeogpr = "archaeogpr.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# No explicit python_version pin: let mypy match the interpreter it runs
# under. Pinning to 3.11 here made mypy choke on numpy's own bundled stubs,
# which use newer syntax than 3.11 when run under a 3.12+ interpreter.
ignore_missing_imports = true
